feat:agregando ultimos detalles
